Clicking "Connect Hair" button translates a mesh by it's object location. #35477

Closed
opened 2013-05-22 23:16:53 +02:00 by Rhett Jackson · 4 comments

%%%--- Operating System, Graphics card ---
OSX 10.8.3, NVIDIA GTX 680

- Blender version with error, and version that worked ---

Blender 2.67 & 2.67a have the error. I don't know about it's presence in any other version.

- Short description of error ---

If an object has a hair system and a mask modifier, clicking the "Connect Hair" button will translate the object's mesh by an amount equal to the object's location in world space.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

In the attached blend file

  1. Observe the object's location is (0,0,1)
  2. Observe the position of a vertex in the cube in edit mode. (1,-1,1) for example.
  3. Click the "Connect Hair" button in the Properties->Particles view.
  4. Observe that the object remains at (0,0,1) but the mesh has been translated by the cube's position. The vertex observed in step 2 has moved to (1,-1,2)

Notes
The cube in the blend file has a mask modifier on it. If the "Vertex group" field is cleared, the bug does not occur when "Connect Hair" is clicked.

To Recreate from the default file

  1. Put a mask modifier on the cube and add a non-empty vertex group to the cube. Set the modifier's "Vertex group" to the vertex group you created.
  2. Move the cube away from (0,0,0)
  3. Add a hair system
  4. in Particle mode, comb some hairs around.
  5. Click "Disconnnect hair" in Properties->Particles
  6. Click "Connect Hair" in Properties->Particles

Blender:


version 2.67 (sub 0), revision b'56914'. b'Release'
build date: b'2013-05-21', b'10:31:18'
%%%

%%%--- Operating System, Graphics card --- OSX 10.8.3, NVIDIA GTX 680 - Blender version with error, and version that worked --- Blender 2.67 & 2.67a have the error. I don't know about it's presence in any other version. - Short description of error --- If an object has a hair system and a mask modifier, clicking the "Connect Hair" button will translate the object's mesh by an amount equal to the object's location in world space. - Steps for others to reproduce the error (preferably based on attached .blend file) --- ***In the attached blend file*** 1) Observe the object's location is (0,0,1) 2) Observe the position of a vertex in the cube in edit mode. (1,-1,1) for example. 3) Click the "Connect Hair" button in the Properties->Particles view. 4) Observe that the object remains at (0,0,1) but the mesh has been translated by the cube's position. The vertex observed in step 2 has moved to (1,-1,2) ***Notes*** The cube in the blend file has a mask modifier on it. If the "Vertex group" field is cleared, the bug does not occur when "Connect Hair" is clicked. ***To Recreate from the default file*** 1) Put a mask modifier on the cube and add a non-empty vertex group to the cube. Set the modifier's "Vertex group" to the vertex group you created. 2) Move the cube away from (0,0,0) 3) Add a hair system 4) in Particle mode, comb some hairs around. 5) Click "Disconnnect hair" in Properties->Particles 6) Click "Connect Hair" in Properties->Particles Blender: **** version 2.67 (sub 0), revision b'56914'. b'Release' build date: b'2013-05-21', b'10:31:18' %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Removed pasted in long log, for readability of reports.%%%

%%%Removed pasted in long log, for readability of reports.%%%

%%%fixed r57213.%%%

%%%fixed r57213.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35477
No description provided.