fix [#35477] Clicking "Connect Hair" button translates a mesh by it's object location.